--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
@@ -76,7 +77,7 @@
   "scripts": {
     "start": "./node_modules/.bin/serve -s build/ -l $PORT",
     "start-dev": "node scripts/start.js",
-    "build": "node scripts/build.js && rm -rf ../hp-server/client/* && mv ./build/* ../hp-server/client/",
+    "build": "node scripts/build.js && rm -rf ../choice-server/client/* && mv ./build/* ../choice-server/client/",
     "test": "node scripts/test.js --env=jsdom",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
