--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-resolve": "23.6.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -72,12 +73,13 @@
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
+    "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
     "start": "./node_modules/.bin/serve -s build/ -l $PORT",
     "start-dev": "node scripts/start.js",
-    "build": "node scripts/build.js && rm -rf ../choice-server/client/* && mv ./build/* ../choice-server/client/",
+    "build": "node scripts/build.js && react-snapshot && rm -rf ../choice-server/client/* && mv ./build/* ../choice-server/client/",
     "test": "node scripts/test.js --env=jsdom",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
@@ -139,6 +141,14 @@
     ]
   },
   "devDependencies": {
-    "husky": "^1.3.1"
-  }
+    "husky": "^1.3.1",
+    "react-snapshot": "^1.3.0"
+  },
+  "reactSnapshot": {
+    "include": [
+      "/"
+    ],
+    "snapshotDelay": 3000
+  },
+  "proxy": "http://localhost:5000"
 }
